@@ -1,4 +1,5 @@
 
-Sep 19     1:45 PM
+Sep 19     4:15 PM
+Sep 19     1:45 PM      3:30 PM     1.75
 Sep 19     7:45 AM      9:15 AM     1.5
 Sep 18     8    PM     10    PM     2
