@@ -1,4 +1,4 @@
 <%=h @target.arch %><br/>
 <%=h @target.os %><br/>
-<%=h @target.impl %> <%=h @target.impl_branch %><br/>
-RubySpec <%=h @target.spec_version %>
+<%=h @target.impl %> <%=h @target.impl_version %><br/>
+Ruby <%=h @target.ruby_version %>
