@@ -1,0 +1,19 @@
+
+ARCHS = [
+         "ppc",
+         "i386",
+         "amd64",
+         "sparc",
+         "x86_64",
+         "universal"
+        ]
+        
+OPERATING_SYSTEMS = [
+                    "Windows XP",
+                    "Windows Vista",
+                    "Ubuntu 7.10 (Gutsy)",
+                    "Ubuntu 8.04 LTS (Hardy)",
+                    "Mac OS 10.3 (Panther)",
+                    "Mac OS 10.4 (Tiger)",
+                    "Mac OS 10.5 (Leopard)"
+                    ]
