@@ -1,0 +1,20 @@
+
+RUBY_VERSIONS = [
+                 "1.8.5",
+                 "1.8.6",
+                 "1.8.6 HEAD",
+                 "1.8.7",
+                 "1.8.7 HEAD",
+                 "1.9.0",
+                 "1.9.0 HEAD"
+                ]
+                
+IMPLEMENTATIONS = [
+                   "MRI",
+                   "JRuby",
+                   "IronRuby",
+                   "Rubinius",
+                   "MacRuby",
+                   "MagLev",
+                   "Ruby.NET"
+                  ]
