@@ -3,16 +3,16 @@ ryanlowe_mri_head:
   created_by: 100001 #ryanlowe
   secret: 123456
   impl: MRI
-  impl_branch: HEAD
-  spec_version: 1.9
-  arch: Intel Core 2 Duo
-  os: Mac OS X 10.5.4
+  impl_version: 1.8.6 patchlevel 114
+  ruby_version: 1.8.6
+  arch: x86_64
+  os: Mac OS 10.5 (Leopard)
 ryanlowe_rbx_head:
   id: 400002
   created_by: 100001 #ryanlowe
   secret: abcdef
   impl: Rubinius
-  impl_branch: HEAD
-  spec_version: 1.8
-  arch: Intel Core 2 Duo
-  os: Mac OS X 10.5.4
+  impl_version: HEAD
+  ruby_version: 1.8.6 HEAD
+  arch: x86_64
+  os: Mac OS 10.5 (Leopard)
